# CPong

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
game/: main.c
src/: Ball.c  Ball.h  Events.h  Fonts.c  Fonts.h  Memory.h  Paddle.c  Paddle.h  Player.c  Player.h  Pong.h  PongDefs.h  PongMain.c  Renderer.c  Renderer.h  STDTypes.h  Texture.c  Texture.h  Timestep.h
